--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,7 @@
-flask==3.0.2
-flask-cors==4.0.0
 python-dotenv==1.0.1
-
-# FastAPI AI Chat service
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 motor==3.5.1
 httpx==0.27.2
-pydantic>=2.9.0
+pydantic==2.10.6
+pydantic-core==2.27.2
